# uww-browser

./: Cargo.toml  append_exemptions.py
.cargo/: config.toml.in
browser/components/: BrowserGlue.sys.mjs  moz.build
browser/components/uww/: UWWProtocolHandler.sys.mjs  components.conf  jar.mn  moz.build  nsIUWWIdentity.idl  uww.js
browser/components/uww/id/: Cargo.toml  UWWIdentity.sys.mjs
browser/components/uww/id/src/: lib.rs
browser/components/uww/pay/: UWWPay.sys.mjs
browser/components/uww/rust/: Cargo.toml  moz.build
browser/components/uww/rust/src/: lib.rs
browser/components/uww/stewardship/: UWWStewardship.sys.mjs  stewardship.css
browser/components/uww/tests/browser/: browser.ini  browser_uww_features.js
browser/themes/uww/: zen.css
docs/private/: UWW Browser Feature Checklist.md
supply-chain/: config.toml
